GSvarServer: implemented file metadata caching on the server

--- a/.github/workflows/mac_machine.yml
+++ b/.github/workflows/mac_machine.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Install Python 3
       run: brew install python@3.10
     - name: Setup other dependencies
-      run: brew install lzlib openssl
+      run: brew install lzlib
     - name: Install Qt 5
       run: brew install qt@5
     - name: Link Qt installation      
