Updated GSvar/GSvarServer documentation.

--- a/bin/GSvar.ini.example
+++ b/bin/GSvar.ini.example
@@ -65,8 +65,8 @@ gsvar_file_outdated_before = 2021-12-01
 interpretability_regions = 
 text_editor = 
 
-#Path to the file that includes root and intermediate certificates, needed to access BAM files over HTTPS
+#GSVar server settings
+server_host = ""
+server_port = 8443
 curl_ca_bundle = "ca-bundle.crt"
-
-#Check for the user notifications comming from the server (e.g. information about updates)
 display_user_notifications = true
