--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -263,6 +263,22 @@ Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occ
 Variant type	HIGH=frameshift_variant,splice_acceptor_variant,splice_donor_variant,start_lost,start_retained_variant,stop_gained,stop_lost	MODERATE=inframe_deletion,inframe_insertion,missense_variant	LOW=splice_region_variant	MODIFIER=
 SNVs only	invert=no	disabled
 
+#dominant relaxed lrGS (add phenotype region)
+Allele frequency	max_af=1
+Allele frequency (sub-populations)	max_af=1
+Count NGSD	max_count=5	ignore_genotype=no	mosaic_as_het=no
+Impact	impact=HIGH,MODERATE,LOW
+Filter columns	entries=low_conf_region	action=REMOVE	disabled
+Splice effect	SpliceAi=0.5	MaxEntScan=HIGH	splice_site_only=yes	action=FILTER
+Predicted pathogenic	min=2	action=FILTER	skip_high_impact=no	cutoff_phylop=1.6	cutoff_cadd=20	cutoff_revel=0.9	cutoff_alphamissense=0.56	disabled
+Annotated pathogenic	sources=ClinVar,HGMD	also_likely_pathogenic=yes	action=KEEP
+Allele frequency	max_af=3
+Filter columns	entries=low_mappability,mosaic	action=REMOVE
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=4,5	action=KEEP
+Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occurences=1	min_af=0.2	max_af=1
+SNVs only	invert=no	disabled
+
 #---
 
 #somatic
