--- a/bin/GSvar.ini.example
+++ b/bin/GSvar.ini.example
@@ -65,8 +65,9 @@ gsvar_file_outdated_before = 2021-12-01
 interpretability_regions = 
 text_editor = 
 
-#Path to the file that includes root and intermediate certificates, needed to access BAM files over HTTPS
-curl_ca_bundle = "ca-bundle.crt"
-
-#Check for the user notifications comming from the server (e.g. information about updates)
+#GSvar server
+server_host = ""
+server_port = 
+curl_ca_bundle = ""
 display_user_notifications = true
+use_proxy_for_gsvar_server = false
