bin/GSvar_filters.ini: updated domimant relaxed lrGS filter

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -269,7 +269,7 @@ Allele frequency (sub-populations)	max_af=1
 Count NGSD	max_count=5	ignore_genotype=no	mosaic_as_het=no
 Impact	impact=HIGH,MODERATE,LOW
 Filter columns	entries=low_conf_region	action=REMOVE	disabled
-Splice effect	SpliceAi=0.5	MaxEntScan=HIGH	splice_site_only=yes	action=FILTER
+Splice effect	SpliceAi=0.5	MaxEntScan=HIGH	splice_site_only=yes	action=KEEP
 Predicted pathogenic	min=2	action=FILTER	skip_high_impact=no	cutoff_phylop=1.6	cutoff_cadd=20	cutoff_revel=0.9	cutoff_alphamissense=0.56	disabled
 Annotated pathogenic	sources=ClinVar,HGMD	also_likely_pathogenic=yes	action=KEEP
 Allele frequency	max_af=3
