bin/GSvar_filters.ini: added short-read low mappability filter for lrGS

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -127,6 +127,18 @@ Classification NGSD	classes=1,2	action=REMOVE
 Classification NGSD	classes=3,4,5,M	action=KEEP
 Filter columns	entries=low_mappability	action=FILTER
 
+#sr low mappability lrGS
+Allele frequency	max_af=1
+Allele frequency (sub-populations)	max_af=1
+Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
+Impact	impact=HIGH,MODERATE,LOW
+Splice effect	SpliceAi=0.5	MaxEntScan=HIGH	splice_site_only=yes	action=KEEP
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
+Allele frequency	max_af=3
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=3,4,5,M	action=KEEP
+Filter columns	entries=sr_low_mappability	action=FILTER
+
 #---
 
 #carrier (add ACMG region)
