bin/GSvar_filters.ini: updated lrGS filter set

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -138,6 +138,7 @@ Allele frequency	max_af=3
 Classification NGSD	classes=1,2	action=REMOVE
 Classification NGSD	classes=3,4,5,M	action=KEEP
 Filter columns	entries=sr_low_mappability	action=FILTER
+lr short-read overlap	invert=yes	disabled
 
 #---
 
