GSvar: added HerediVar support

--- a/bin/GSvar.ini.example
+++ b/bin/GSvar.ini.example
@@ -30,6 +30,7 @@ PrimerDesign = ""
 alamut_host = ""
 alamut_institution = ""
 alamut_apikey = ""
+HerediVar = ""
 
 #proxy settings for GSvar
 proxy_host = ""
