GSvar: renamed class 'R*' to 'R' (changed in HerediCare and HerediVar)

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -8,7 +8,7 @@ Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=tru
 Allele frequency	max_af=3.0
 Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Classification NGSD	action=REMOVE	classes=1,2
-Classification NGSD	action=KEEP	classes=3,4,5,M,R*
+Classification NGSD	action=KEEP	classes=3,4,5,M,R
 
 #rare variants (non-coding, predicted splicing change)
 Allele frequency	max_af=1
