--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -230,7 +230,7 @@ Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
 Allele frequency	max_af=3
 Filter columns	entries=low_mappability,mosaic	action=REMOVE
 Classification NGSD	classes=1,2	action=REMOVE
-Classification NGSD	classes=3,4,5,M,R*	action=KEEP
+Classification NGSD	classes=3,4,5,M,R	action=KEEP
 Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occurences=1	min_af=0.2	max_af=1
 SNVs only	invert=no	disabled
 
