--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -127,19 +127,6 @@ Classification NGSD	classes=1,2	action=REMOVE
 Classification NGSD	classes=3,4,5,M	action=KEEP
 Filter columns	entries=low_mappability	action=FILTER
 
-#sr low mappability lrGS
-Allele frequency	max_af=1
-Allele frequency (sub-populations)	max_af=1
-Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
-Impact	impact=HIGH,MODERATE,LOW
-Splice effect	SpliceAi=0.5	MaxEntScan=HIGH	splice_site_only=yes	action=KEEP
-Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
-Allele frequency	max_af=3
-Classification NGSD	classes=1,2	action=REMOVE
-Classification NGSD	classes=3,4,5,M	action=KEEP
-Filter columns	entries=sr_low_mappability	action=FILTER
-lr short-read overlap	invert=yes	disabled
-
 #---
 
 #carrier (add ACMG region)
@@ -177,30 +164,8 @@ Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=4,5
 Trio	types=de-novo,recessive,LOH,comp-het,x-linked	build=hg38
 
-#trio stringent lrGS
-Allele frequency	max_af=1.0
-Allele frequency (sub-populations)	max_af=1.0
-Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
-Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=30	min_occurences=1	min_af=0.2	max_af=1.0
-Variant type	HIGH=frameshift_variant,splice_acceptor_variant,splice_donor_variant,start_lost,start_retained_variant,stop_gained,stop_lost	MODERATE=inframe_deletion,inframe_insertion,missense_variant	LOW=splice_region_variant	MODIFIER=
-Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=no	action=KEEP
-Allele frequency	max_af=3
-Classification NGSD	classes=1,2	action=REMOVE
-Classification NGSD	classes=4,5	action=KEEP
-Trio	types=de-novo,recessive,LOH,comp-het,x-linked	gender_child=n/a	build=hg38
-
-#trio relaxed lrGS
-Allele frequency	max_af=1.0
-Allele frequency (sub-populations)	max_af=1.0
-Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
-Variant quality	qual=5	depth=0	mapq=40	strand_bias=-1	allele_balance=-1	min_occurences=0	min_af=0.0	max_af=1.0
-Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
-Allele frequency	max_af=3
-Classification NGSD	classes=1,2	action=REMOVE
-Classification NGSD	classes=4,5	action=KEEP
-Trio	types=de-novo,recessive,LOH,comp-het,x-linked	gender_child=n/a	build=hg38
-
 #---
+
 #multi-sample recessive
 Allele frequency	max_af=1.0
 Allele frequency (sub-populations)	max_af=1.0
@@ -240,7 +205,62 @@ Genotype control	genotypes=wt
 
 #---
 
-#recessive stringent lrGS
+#somatic
+Variant type
+Column match	pattern=promoter	column=regulatory	action=KEEP
+Filter column empty
+
+#tumor only
+Allele frequency	max_af=0.1
+Allele frequency (sub-populations)	max_af=0.1
+Tumor zygosity	hom_af_range=10
+Filter column empty
+Column match	pattern=known	column=CGI_driver_statement	action=KEEP
+Variant type
+
+#---
+
+#lrGS rare variants (coding and splicing region)
+Allele frequency	max_af=1
+Allele frequency (sub-populations)	max_af=1
+Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
+Impact	impact=HIGH,MODERATE,LOW
+Filter columns	entries=off-target	action=REMOVE
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
+Allele frequency	max_af=3
+Filter columns	entries=low_mappability,mosaic	action=REMOVE
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=3,4,5,M,R	action=KEEP
+Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occurences=1	min_af=0.2	max_af=1
+SNVs only	invert=no	disabled
+
+#lrGS rare variants (non-coding, predicted splicing change)
+Allele frequency	max_af=1
+Allele frequency (sub-populations)	max_af=1
+Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
+Impact	impact=MODIFIER
+Splice effect	SpliceAi=0.5	MaxEntScan=HIGH	splice_site_only=no	action=FILTER
+Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occurences=1	min_af=0.2	max_af=1
+SNVs only	invert=no	disabled
+
+#lrGS rare variants (non-coding, UTR/RNA)
+Allele frequency	max_af=1
+Allele frequency (sub-populations)	max_af=1
+Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
+Allele frequency	max_af=2
+Filter columns	entries=low_mappability,mosaic	action=REMOVE
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=3,4,5,M	action=KEEP
+Variant type	HIGH=	MODERATE=	LOW=	MODIFIER=3_prime_UTR_variant,5_prime_UTR_variant,non_coding_transcript_exon_variant
+OMIM genes	action=FILTER
+Predicted pathogenic	min=1	action=FILTER	skip_high_impact=no	cutoff_phylop=1.6	cutoff_cadd=20	cutoff_revel=0.9	cutoff_alphamissense=0.56
+Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occurences=1	min_af=0.2	max_af=1
+SNVs only	invert=no	disabled
+
+#---
+
+#lrGS recessive stringent
 Allele frequency	max_af=0.5
 Allele frequency (sub-populations)	max_af=0.5
 Count NGSD	max_count=15	ignore_genotype=no	mosaic_as_het=no
@@ -254,7 +274,7 @@ Classification NGSD	classes=4,5	action=KEEP
 Genotype affected	genotypes=hom,comp-het (phased)
 Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occurences=1	min_af=0.2	max_af=1
 
-#recessive relaxed lrGS
+#lrGS recessive relaxed
 Allele frequency	max_af=1
 Allele frequency (sub-populations)	max_af=1
 Count NGSD	max_count=40	ignore_genotype=no	mosaic_as_het=no
@@ -268,7 +288,7 @@ Classification NGSD	classes=4,5	action=KEEP
 Genotype affected	genotypes=hom,comp-het
 Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occurences=1	min_af=0.2	max_af=1
 
-#dominant stringent lrGS
+#lrGS dominant stringent
 Allele frequency	max_af=0.1
 Allele frequency (sub-populations)	max_af=0.1
 Count NGSD	max_count=5	ignore_genotype=no	mosaic_as_het=no
@@ -284,7 +304,7 @@ Variant type	HIGH=frameshift_variant,splice_acceptor_variant,splice_donor_varian
 Variant quality	qual=20	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occurences=1	min_af=0.25	max_af=1
 SNVs only	invert=no	disabled
 
-#dominant relaxed lrGS
+#lrGS dominant relaxed
 Allele frequency	max_af=0.1
 Allele frequency (sub-populations)	max_af=0.1
 Count NGSD	max_count=5	ignore_genotype=no	mosaic_as_het=no
@@ -299,7 +319,7 @@ Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=40	min_occ
 Variant type	HIGH=frameshift_variant,splice_acceptor_variant,splice_donor_variant,start_lost,start_retained_variant,stop_gained,stop_lost	MODERATE=inframe_deletion,inframe_insertion,missense_variant	LOW=splice_region_variant	MODIFIER=
 SNVs only	invert=no	disabled
 
-#dominant relaxed lrGS (add phenotype region)
+#lrGS dominant relaxed (add phenotype region)
 Allele frequency	max_af=1
 Allele frequency (sub-populations)	max_af=1
 Count NGSD	max_count=5	ignore_genotype=no	mosaic_as_het=no
@@ -317,15 +337,40 @@ SNVs only	invert=no	disabled
 
 #---
 
-#somatic
-Variant type
-Column match	pattern=promoter	column=regulatory	action=KEEP
-Filter column empty
+#sr low mappability lrGS
+Allele frequency	max_af=1
+Allele frequency (sub-populations)	max_af=1
+Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
+Impact	impact=HIGH,MODERATE,LOW
+Splice effect	SpliceAi=0.5	MaxEntScan=HIGH	splice_site_only=yes	action=KEEP
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
+Allele frequency	max_af=3
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=3,4,5,M	action=KEEP
+Filter columns	entries=sr_low_mappability	action=FILTER
+lr short-read overlap	invert=yes	disabled
 
-#tumor only
-Allele frequency	max_af=0.1
-Allele frequency (sub-populations)	max_af=0.1
-Tumor zygosity	hom_af_range=10
-Filter column empty
-Column match	pattern=known	column=CGI_driver_statement	action=KEEP
-Variant type
+#---
+
+#lrGS trio stringent
+Allele frequency	max_af=1.0
+Allele frequency (sub-populations)	max_af=1.0
+Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
+Variant quality	qual=10	depth=0	mapq=40	strand_bias=20	allele_balance=30	min_occurences=1	min_af=0.2	max_af=1.0
+Variant type	HIGH=frameshift_variant,splice_acceptor_variant,splice_donor_variant,start_lost,start_retained_variant,stop_gained,stop_lost	MODERATE=inframe_deletion,inframe_insertion,missense_variant	LOW=splice_region_variant	MODIFIER=
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=no	action=KEEP
+Allele frequency	max_af=3
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=4,5	action=KEEP
+Trio	types=de-novo,recessive,LOH,comp-het,x-linked	build=hg38
+
+#lrGS trio relaxed
+Allele frequency	max_af=1.0
+Allele frequency (sub-populations)	max_af=1.0
+Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
+Variant quality	qual=5	depth=0	mapq=40	strand_bias=-1	allele_balance=-1	min_occurences=0	min_af=0.0	max_af=1.0
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
+Allele frequency	max_af=3
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=4,5	action=KEEP
+Trio	types=de-novo,recessive,LOH,comp-het,x-linked	build=hg38
