Switched to libxml2 for XML validation

--- a/.github/workflows/windows_machine.yml
+++ b/.github/workflows/windows_machine.yml
@@ -23,6 +23,11 @@ jobs:
         run: unzip htslib_win_64.zip
       - name: Copy htslib to bin folder
         run: (cp htslib/lib/hts.dll.a bin/) && (cp htslib/lib/hts-3.dll bin/) && (cp htslib/lib/libhts.a bin/)
+      - name: Unpack libxml2
+        working-directory: ./
+        run: unzip -o libxml2_win_64.zip
+      - name: Copy libxml2 to bin folder
+        run: cp libxml2/.libs/* bin/
       - name: Download test files
         run: make download_test_files
       - name: Build other dependencies
