GSvar: updated filters

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -25,7 +25,7 @@ Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
 Allele frequency	max_af=2
 Filter columns	entries=low_mappability,mosaic	action=REMOVE
 Classification NGSD	classes=1,2	action=REMOVE
-Classification NGSD	classes=3,4,5,M	action=KEEP
+Classification NGSD	classes=3,4,5,M,R	action=KEEP
 Variant type	HIGH=	MODERATE=	LOW=	MODIFIER=3_prime_UTR_variant,5_prime_UTR_variant,non_coding_transcript_exon_variant
 OMIM genes	action=FILTER
 Predicted pathogenic	min=1	action=FILTER	skip_high_impact=no	cutoff_phylop=1.6	cutoff_cadd=20	cutoff_revel=0.9	cutoff_alphamissense=0.56
@@ -124,7 +124,7 @@ Impact	impact=HIGH,MODERATE,LOW
 Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
 Allele frequency	max_af=3
 Classification NGSD	classes=1,2	action=REMOVE
-Classification NGSD	classes=3,4,5,M	action=KEEP
+Classification NGSD	classes=3,4,5,M,R	action=KEEP
 Filter columns	entries=low_mappability	action=FILTER
 
 #---
@@ -251,7 +251,7 @@ Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
 Allele frequency	max_af=2
 Filter columns	entries=low_mappability,mosaic	action=REMOVE
 Classification NGSD	classes=1,2	action=REMOVE
-Classification NGSD	classes=3,4,5,M	action=KEEP
+Classification NGSD	classes=3,4,5,M,R	action=KEEP
 Variant type	HIGH=	MODERATE=	LOW=	MODIFIER=3_prime_UTR_variant,5_prime_UTR_variant,non_coding_transcript_exon_variant
 OMIM genes	action=FILTER
 Predicted pathogenic	min=1	action=FILTER	skip_high_impact=no	cutoff_phylop=1.6	cutoff_cadd=20	cutoff_revel=0.9	cutoff_alphamissense=0.56
@@ -346,7 +346,7 @@ Splice effect	SpliceAi=0.5	MaxEntScan=HIGH	splice_site_only=yes	action=KEEP
 Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
 Allele frequency	max_af=3
 Classification NGSD	classes=1,2	action=REMOVE
-Classification NGSD	classes=3,4,5,M	action=KEEP
+Classification NGSD	classes=3,4,5,M,R	action=KEEP
 Filter columns	entries=sr_low_mappability	action=FILTER
 lr short-read overlap	invert=yes	disabled
 
