--- a/.github/workflows/linux_machine_gcc_gt_6.yml
+++ b/.github/workflows/linux_machine_gcc_gt_6.yml
@@ -1,4 +1,4 @@
-name: Linux build
+name: Linux build (Qt 6 on Ubuntu 24.04)
 
 on: [push, pull_request]
 
@@ -28,6 +28,8 @@ jobs:
       run: sudo apt-get update
     - name: Setup test environment
       run: sudo apt-get -y install make g++ git python3 python3-matplotlib qt6-base-dev qmake6 libqt6sql6 libqt6sql6-mysql libqt6charts6-dev libbz2-dev libqt6svg6-dev liblzma-dev zlib1g-dev libcurl4 libcurl4-openssl-dev ca-certificates libtool pkg-config libxml2 libxml2-dev
+    - name: Create symlink for qmake6
+      run: ln -s qmake6 qmake
     - name: Create symlink for python
       run: sudo ln -fs /bin/python3 /bin/python
     - name: Update submodules
