--- a/.github/workflows/linux_machine_gcc_gt_6_6.yml
+++ b/.github/workflows/linux_machine_gcc_gt_6_6.yml
@@ -1,10 +1,10 @@
-name: Qt 5.15 on Ubuntu 22.04 - Linux (default)
+name: Qt 6.6 on Ubuntu 24.10 - Linux
 
 on: [push, pull_request]
 
 jobs:
   gcc-build-and-test:
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-24.10
 
     services:
       mysql:
@@ -27,7 +27,9 @@ jobs:
     - name: Update OS repositories
       run: sudo apt-get update
     - name: Setup test environment
-      run: sudo apt-get -y install make g++ git python3 python3-matplotlib qtbase5-dev qt5-qmake libqt5sql5-mysql libqt5charts5-dev libbz2-dev libqt5svg5-dev liblzma-dev zlib1g-dev libcurl4 libcurl4-openssl-dev ca-certificates libtool pkg-config libxml2 libxml2-dev
+      run: sudo apt-get -y install wget make g++ git python3 python3-matplotlib qt6-base-dev qmake6 libqt6sql6 libqt6sql6-mysql libqt6charts6-dev libbz2-dev libqt6svg6-dev liblzma-dev zlib1g-dev libcurl4 libcurl4-openssl-dev ca-certificates libtool pkg-config libxml2 libxml2-dev
+    - name: Create symlink for qmake6
+      run: sudo ln -fs /usr/bin/qmake6 /usr/bin/qmake
     - name: Create symlink for python
       run: sudo ln -fs /bin/python3 /bin/python
     - name: Update submodules
