GSvar: added a flag to make GSvar use a fixed number for IGV, i.e. it will ignore user id

--- a/bin/GSvar.ini.example
+++ b/bin/GSvar.ini.example
@@ -5,6 +5,7 @@ igv_host=127.0.0.1
 igv_port=60151
 igv_genome=1kg_v37
 igv_virus_genome = ""
+use_fixed_igv_port_number=false
 
 email_run_finished=""
 email_run_analyzed=""
