--- a/bin/GSvarServer.ini.example
+++ b/bin/GSvarServer.ini.example
@@ -39,6 +39,8 @@ session_duration = 36000
 #use in-memory structure to keep file metadata information(name, absolute path, size, etc.), reduces the number of calls to the file system
 enable_file_metadata_caching = false
 file_location_cache_lifespan = 300
+#enables file watcher for the files with notifications for users
+allow_notifying_users = false
 
 #proxy settings - set if proxy is needed to access files on the internet
 proxy_host = ""
