add somatic WGS SNV filter

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -210,6 +210,15 @@ Variant type
 Column match	pattern=promoter	column=regulatory	action=KEEP
 Filter column empty
 
+#somatic WGS
+Variant type	HIGH=frameshift_variant,splice_acceptor_variant,splice_donor_variant,start_lost,start_retained_variant,stop_gained,stop_lost	MODERATE=inframe_deletion,inframe_insertion,missense_variant	LOW=splice_region_variant	MODIFIER=
+Column match	pattern=promoter	column=regulatory	action=KEEP
+Filter column empty	disabled
+Filter columns	entries=all-unknown,freq-nor,freq-tum,low_conf_region,lt-3-reads,special-chromosome,weak-evidence,low_mappability,mosaic	action=REMOVE
+Column match	pattern=^$	column=NGSD_som_vicc_interpretation	action=FILTER	disabled
+Classification NGSD	classes=4,5	action=FILTER	disabled
+Annotated pathogenic	sources=ClinVar	also_likely_pathogenic=yes	action=FILTER	disabled
+
 #tumor only
 Allele frequency	max_af=0.1
 Allele frequency (sub-populations)	max_af=0.1
