--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -154,15 +154,17 @@ Classification NGSD	action=KEEP	classes=4,5
 Trio	types=de-novo,recessive,LOH,comp-het,x-linked	build=hg38
 
 #trio relaxed
-Allele frequency	max_af=1.0
-Allele frequency (sub-populations)	max_af=1.0
-Count NGSD	max_count=20	ignore_genotype=false
-Variant quality	qual=20	depth=5	mapq=40	strand_bias=-1	allele_balance=-1	min_occurences=0
-Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=true
-Allele frequency	max_af=3.0
-Classification NGSD	action=REMOVE	classes=1,2
-Classification NGSD	action=KEEP	classes=4,5
-Trio	types=de-novo,recessive,LOH,comp-het,x-linked	build=hg38
+Allele frequency	max_af=1
+Allele frequency (sub-populations)	max_af=1
+Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
+Variant quality	qual=20	depth=5	mapq=40	strand_bias=-1	allele_balance=-1	min_occurences=0	min_af=0	max_af=1
+Variant type	HIGH=frameshift_variant,splice_acceptor_variant,splice_donor_variant,start_lost,start_retained_variant,stop_gained,stop_lost	MODERATE=inframe_deletion,inframe_insertion,missense_variant	LOW=splice_region_variant,stop_retained_variant,synonymous_variant	MODIFIER=5_prime_UTR_variant,non_coding_transcript_exon_variant
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
+Splice effect	SpliceAi=0.5	MaxEntScan=LOW	splice_site_only=no	action=KEEP
+Allele frequency	max_af=3
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=4,5	action=KEEP
+Trio	types=de-novo,recessive,LOH,comp-het,x-linked	gender_child=n/a	build=hg38
 
 #---
 
