GSvar: updated tumor-only filter

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -224,10 +224,15 @@ Annotated pathogenic	sources=ClinVar	also_likely_pathogenic=yes	action=FILTER	di
 #tumor only
 Allele frequency	max_af=0.1
 Allele frequency (sub-populations)	max_af=0.1
-Tumor zygosity	hom_af_range=10
-Filter column empty
-Column match	pattern=known	column=CGI_driver_statement	action=KEEP
-Variant type
+Tumor zygosity	het_af_range=0	hom_af_range=10
+Filter columns	entries=low_conf_region,off-target	action=REMOVE
+Variant type	HIGH=frameshift_variant,splice_acceptor_variant,splice_donor_variant,start_lost,start_retained_variant,stop_gained,stop_lost	MODERATE=inframe_deletion,inframe_insertion,missense_variant	LOW=splice_region_variant	MODIFIER=
+Annotated pathogenic	sources=ClinVar,HGMD	also_likely_pathogenic=no	action=KEEP
+Allele frequency (sub-populations)	max_af=0.1
+Count NGSD	max_count=200	ignore_genotype=yes	mosaic_as_het=yes
+Classification NGSD	classes=4,5	action=KEEP
+Column match	pattern=[12]	column=CMC_mutation_significance	action=KEEP
+Column match	pattern=ONCOGENIC	column=NGSD_som_vicc_interpretation	action=KEEP
 
 #---
 
