--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -61,19 +61,18 @@ Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=4,5
 Genotype affected	genotypes=hom,comp-het
 
-
 #dominant stringent
 Allele frequency	max_af=0.1
 Allele frequency (sub-populations)	max_af=0.1
-Count NGSD	max_count=5	ignore_genotype=false
+Count NGSD	max_count=5	ignore_genotype=no	mosaic_as_het=no
 Impact	impact=HIGH
-Gene constraint	min_pli=0.8	max_oe_lof=0.35
-Filter columns	action=REMOVE	entries=low_conf_region	disabled
-Annotated pathogenic	action=KEEP	sources=HGMD,ClinVar	also_likely_pathogenic=false
-Allele frequency	max_af=3.0
-Filter columns	action=REMOVE	entries=low_mappability,mosaic
-Classification NGSD	action=REMOVE	classes=1,2
-Classification NGSD	action=KEEP	classes=4,5
+Gene constraint	max_oe_lof=0.35	min_pli=0.8
+Filter columns	entries=low_conf_region	action=REMOVE	disabled
+Filter columns	entries=low_mappability,mosaic	action=REMOVE
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=no	action=KEEP
+Allele frequency	max_af=3
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=4,5	action=KEEP
 
 #dominant relaxed
 Allele frequency	max_af=0.1
