GSvar: updated CNV filters (keep CNVs larger than 1MB and enable CNP filter by default)

--- a/bin/GSvar_filters_cnv.ini
+++ b/bin/GSvar_filters_cnv.ini
@@ -4,7 +4,8 @@ CNV size	size=10.0	disabled
 CNV regions	regions=3	disabled
 CNV log-likelihood	min_ll=12.0	scale_by_regions=yes
 CNV q-value	max_q=0.05	disabled
-CNV polymorphism region	max_ol=0.95	disabled
+CNV size	action=KEEP	size=1000.0
+CNV polymorphism region	max_ol=0.95
 CNV copy-number	cn=0,1	disabled
 CNV OMIM genes	disabled
 CNV gene overlap	disabled
@@ -15,7 +16,8 @@ CNV size	size=10.0	disabled
 CNV regions	regions=3	disabled
 CNV log-likelihood	min_ll=12.0	scale_by_regions=yes	disabled
 CNV q-value	max_q=0.05	disabled
-CNV polymorphism region	max_ol=0.95	disabled
+CNV size	action=KEEP	size=1000.0
+CNV polymorphism region	max_ol=0.95
 CNV copy-number	cn=0,1	disabled
 CNV OMIM genes	disabled
 CNV gene overlap	disabled
@@ -34,13 +36,14 @@ CNV tumor CN change	min_tumor_cn=6	max_tumor_cn=100
 CNV maximum log-likelihood	disabled
 
 #ClinCNV: lrGS
-CNV size	size=10	disabled
+CNV size	size=100.0	disabled
 CNV regions	regions=3	disabled
 CNV log-likelihood	min_ll=12	scale_by_regions=no
+CNV log-likelihood	min_ll=5	scale_by_regions=yes
 CNV q-value	max_q=0.05	disabled
-CNV polymorphism region	column=overlap af_genomes_imgag	max_ol=0.95	disabled
+CNV size	action=KEEP	size=1000.0
+CNV polymorphism region	column=overlap af_genomes_imgag	max_ol=0.95
 CNV copy-number	cn=0,1	disabled
 CNV OMIM genes	action=FILTER	disabled
 CNV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no	disabled
 CNV compound-heterozygous	mode=n/a	disabled
-CNV log-likelihood	min_ll=5	scale_by_regions=yes
