--- a/bin/GSvar.ini.example
+++ b/bin/GSvar.ini.example
@@ -7,6 +7,8 @@ igv_genome=1kg_v37
 igv_virus_genome = ""
 use_fixed_igv_port_number=false
 
+#NGSD functionality
+NGSD_enabled=true
 email_run_finished=""
 email_run_analyzed=""
 
@@ -20,7 +22,7 @@ analysis_steps_trio=vc - SNV/InDel calling + annotation, cn - CNV calling + anno
 analysis_steps_somatic=vc - variant calling, vi - virus detection, cn - copy number calling, an - annotation, msi - microsatellite instabilty, an_rna - RNA annotation, db - database import
 analysis_steps_single_sample_rna = ma - mapping, rc - read counting, an -annotation, plt - plot, fu - fusion, db - database import
 analysis_steps_cfdna=ma - mapping, vc - SNV/InDel calling + annotation, db - database import
-analysis_steps_single_sample_lr=ma - mapping, vc - SNV/InDel calling, cn - CNV calling, sv - SV calling, ph - phasing, re - repeat expansion calling, me - methylation calling, an - annotation, db - database import
+analysis_steps_single_sample_lr=ma - mapping, vc - SNV/InDel calling, cn - CNV calling, sv - SV calling, ph - phasing, re - repeat expansion calling, me - methylation calling, pg - paralogous genes calling, an - annotation, db - database import
 analysis_steps_trio_lr=vc - SNV/InDel calling, cn - CNV calling, sv - SV calling, an - annotation, db - database import
 analysis_steps_multi_sample_lr=vc - SNV/InDel calling, cn - CNV calling, sv - SV calling, an - annotation, db - database import
 
@@ -40,6 +42,7 @@ proxy_password = ""
 #special folders for GSvar
 gsvar_report_folder = ""
 gsvar_report_archive = ""
+gsvar_gap_folder = ""
 gsvar_xml_folder = ""
 gsvar_publication_folder = ""
 gsvar_variantsheet_folder = ""
@@ -61,7 +64,6 @@ allow_report_with_all_types = false
 gsvar_file_outdated_before = 2021-12-01
 interpretability_regions = 
 text_editor = 
-
 
 #GSVar server settings
 server_host = ""
