--- a/bin/settings.ini.example
+++ b/bin/settings.ini.example
@@ -54,7 +54,7 @@ nova_seq_x_sw_version = "4.3.16"
 nova_seq_x_app_version = "1.3.13"
 nova_seq_x_keep_fastq = 1
 
-#location, used to enable site-specific adaptations
+#location, used to enable site-specific adaptations, e.g. UKT, MHH
 location = ""
 
 #SSL certificate authorities to validate a connection to the database server
