--- a/bin/settings_nightly.ini
+++ b/bin/settings_nightly.ini
@@ -2,7 +2,10 @@
 #          Common settings that need to be set for many tools             #
 ###########################################################################
 
+#Path to the reference genome FASTA file for GRCh38
 reference_genome = "/mnt/storage2/megSAP/data/genomes/GRCh38.fa"
+
+#Data for lift-over between genome builds (GRCh38 <> GRCh37)
 reference_genome_hg19 ="/mnt/storage2/megSAP/data/genomes/GRCh37.fa"
 liftover_hg19_hg38 = "/mnt/storage2/megSAP/tools/liftOver/hg19ToHg38.over.chain.gz"
 liftover_hg38_hg19 = "/mnt/storage2/megSAP/tools/liftOver/hg38ToHg19.over.chain.gz"
@@ -27,6 +30,7 @@ ngsd_test_pass = "wacRY5MfpXPQQx9M"
 #GL8 MySQL credentials
 genlab_mssql = true
 genlab_host = ""
+genlab_port = 3306
 genlab_name = ""
 genlab_user = ""
 genlab_pass = ""
@@ -41,6 +45,21 @@ data_folder = /mnt/storage2/megSAP/data/
 #setting for variant scoring/ranking
 ranking_variant_blacklist=""
 
+#python executable for plotting (set if the python exe is not in the PATH)
+python_exe = ""
+
+#NovaSeqX
+sample_sheet_path = 
+nova_seq_x_sw_version = "4.3.16"
+nova_seq_x_app_version = "1.3.13"
+nova_seq_x_keep_fastq = 1
+
+#location, used to enable site-specific adaptations, e.g. UKT, MHH
+location = "UKT"
+
+#SSL certificate authorities to validate a connection to the database server
+db_ssl_ca = ""
+
 #server settings
 url_lifetime = 5000
 server_host = "127.0.0.1"
@@ -49,9 +68,3 @@ ssl_certificate =
 ssl_key = 
 ssl_certificate_chain = 
 session_duration = 36000
-
-#NovaSeqX
-sample_sheet_path = 
-nova_seq_x_sw_version = "4.3.16"
-nova_seq_x_app_version = "1.3.13"
-nova_seq_x_keep_fastq = 1
