GSvar: updated filters

--- a/bin/GSvar_filters.ini
+++ b/bin/GSvar_filters.ini
@@ -10,7 +10,20 @@ Filter columns	action=REMOVE	entries=low_mappability,mosaic
 Classification NGSD	action=REMOVE	classes=1,2
 Classification NGSD	action=KEEP	classes=3,4,5,M,R
 
-#rare variants (non-coding, predicted splicing change)
+#rare variants (coding and splicing region + predicted splicing change)
+Allele frequency	max_af=1.0
+Allele frequency (sub-populations)	max_af=1.0
+Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
+Impact	impact=HIGH,MODERATE,LOW
+Filter columns	entries=off-target	action=REMOVE
+Annotated pathogenic	sources=HGMD,ClinVar	also_likely_pathogenic=yes	action=KEEP
+Splice effect	SpliceAi=0.5	MaxEntScan=LOW	splice_site_only=no	action=KEEP
+Allele frequency	max_af=3
+Filter columns	entries=low_mappability,mosaic	action=REMOVE
+Classification NGSD	classes=1,2	action=REMOVE
+Classification NGSD	classes=3,4,5,M,R	action=KEEP
+
+#rare variants (non-coding + predicted splicing change)
 Allele frequency	max_af=1
 Allele frequency (sub-populations)	max_af=1
 Count NGSD	max_count=20	ignore_genotype=no	mosaic_as_het=no
