--- a/bin/GSvar_filters_cnv.ini
+++ b/bin/GSvar_filters_cnv.ini
@@ -1,41 +1,44 @@
-
-#ClinCNV: default
-CNV size	size=10.0	disabled
+#CNV stringent (ClinCNV)
+CNV size	size=10	action=FILTER	disabled
 CNV regions	regions=3	disabled
-CNV log-likelihood	min_ll=12.0	scale_by_regions=yes
+CNV log-likelihood	min_ll=12	scale_by_regions=yes
+CNV log-likelihood	min_ll=20	scale_by_regions=no	disabled
 CNV q-value	max_q=0.05	disabled
-CNV size	action=KEEP	size=1000.0
-CNV polymorphism region	max_ol=0.95
+CNV size	size=1000	action=KEEP
+CNV polymorphism region	column=overlap af_genomes_imgag	max_ol=0.95
 CNV copy-number	cn=0,1	disabled
-CNV OMIM genes	disabled
-CNV gene overlap	disabled
+CNV OMIM genes	action=FILTER	disabled
+CNV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no
 CNV compound-heterozygous	mode=n/a	disabled
+CNV pathogenic CNV overlap	action=KEEP
 
-#ClinCNV: high-sensitivity (add phenotype region)
-CNV size	size=10.0	disabled
+#CNV relaxed (ClinCNV)
+CNV size	size=10	action=FILTER	disabled
 CNV regions	regions=3	disabled
-CNV log-likelihood	min_ll=12.0	scale_by_regions=yes	disabled
+CNV log-likelihood	min_ll=12	scale_by_regions=yes
+CNV log-likelihood	min_ll=20	scale_by_regions=no	disabled
 CNV q-value	max_q=0.05	disabled
-CNV size	action=KEEP	size=1000.0
-CNV polymorphism region	max_ol=0.95
+CNV size	size=1000	action=KEEP
+CNV polymorphism region	column=overlap af_genomes_imgag	max_ol=0.95	disabled
 CNV copy-number	cn=0,1	disabled
-CNV OMIM genes	disabled
-CNV gene overlap	disabled
-CNV compound-heterozygous	mode=n/a	disabled
+CNV OMIM genes	action=FILTER	disabled
+CNV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no
+CNV compound-heterozygous	mode=CNV-SNV/INDEL	disabled
 
-#ClinCNV: array-like (for shallow WGS)
-CNV size	size=35.0
-CNV polymorphism region	max_ol=0.95
-CNV OMIM genes	disabled
-CNV gene overlap	disabled
+#CNV array-like (ClinCNV)
+CNV size	size=35	action=FILTER
+CNV polymorphism region	column=overlap af_genomes_imgag	max_ol=0.95
+CNV OMIM genes	action=FILTER	disabled
+CNV gene overlap	complete=yes	exonic/splicing=yes	intronic/intergenic=no	disabled
+CNV log-likelihood	min_ll=12	scale_by_regions=yes	disabled
 
-#ClinCNV: somatic
+#somatic (ClinCNV) 
 CNV log-likelihood	min_ll=1.0	scale_by_regions=yes
 CNV clonality	min_clonality=0.0	max_clonality=1.0
 CNV tumor CN change	min_tumor_cn=6	max_tumor_cn=100
 CNV maximum log-likelihood	disabled
 
-#ClinCNV: lrGS
+#lrGS (ClinCNV)
 CNV size	size=100.0	disabled
 CNV regions	regions=3	disabled
 CNV log-likelihood	min_ll=12	scale_by_regions=no
