--- a/bin/GSvar_filters_sv.ini
+++ b/bin/GSvar_filters_sv.ini
@@ -1,27 +1,32 @@
 #wgs stringent
 SV remove chr type	chromosome type=special chromosomes
-SV allele frequency NGSD	max_af=1.00
-SV filter columns	action=FILTER	entries=PASS
-SV PE read depth	PE Read Depth=5
+SV allele frequency NGSD	max_af=1
+SV filter columns	entries=PASS	action=FILTER
+SV PE read depth	PE Read Depth=3	only_affected=no
 SV quality	quality=100
 SV CNV overlap	min_ol=0.5	min_size=10000
 SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
-SV genotype affected	genotypes=hom	same_genotype=false	disabled
-SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false	disabled
+SV genotype affected	genotypes=hom	same_genotype=no	disabled
+SV OMIM genes	action=FILTER	disabled
+SV gene overlap	complete=yes	exonic/splicing=yes	intronic/near gene=no
 SV compound-heterozygous	mode=n/a	disabled
-SV break point density NGSD	disabled
+SV break point density NGSD	max_density=30	remove_strict=no	only_system_specific=no
+SV annotated pathogenic	action=KEEP
+
 #wgs relaxed
 SV remove chr type	chromosome type=special chromosomes
-SV allele frequency NGSD	max_af=1.00
+SV allele frequency NGSD	max_af=1
 SV CNV overlap	min_ol=0.5	min_size=10000	disabled
-SV type	Structural variant type=DEL,DUP,INS,INV,BND	disabled
-SV genotype affected	genotypes=hom	same_genotype=false	disabled
-SV OMIM genes	disabled
-SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false	disabled
-SV compound-heterozygous	mode=n/a	disabled
-SV break point density NGSD	disabled
+SV type	Structural variant type=BND	disabled
+SV genotype affected	genotypes=hom	same_genotype=no	disabled
+SV OMIM genes	action=FILTER	disabled
+SV gene overlap	complete=yes	exonic/splicing=yes	intronic/near gene=no	disabled
+SV break point density NGSD	max_density=30	remove_strict=no	only_system_specific=no
+SV break point density NGSD	max_density=100	remove_strict=no	only_system_specific=no	disabled
+SV compound-heterozygous	mode=SV-SNV/INDEL	disabled
+
 #---
+
 #lrGS stringent
 SV remove chr type	chromosome type=special chromosomes
 SV allele frequency NGSD	max_af=1
@@ -37,6 +42,7 @@ SV gene overlap	complete=yes	exonic/splicing=yes	intronic/near gene=no	disabled
 SV compound-heterozygous	mode=n/a	disabled
 SV break point density NGSD	max_density=30	remove_strict=no	only_system_specific=no	disabled
 SV-lr AF	min_af=0.2	max_af=1
+
 #lrGS relaxed
 SV remove chr type	chromosome type=special chromosomes
 SV allele frequency NGSD	max_af=1
@@ -52,7 +58,9 @@ SV gene overlap	complete=yes	exonic/splicing=yes	intronic/near gene=no	disabled
 SV compound-heterozygous	mode=n/a	disabled
 SV break point density NGSD	max_density=30	remove_strict=no	only_system_specific=no	disabled
 SV-lr AF	min_af=0.2	max_af=1
+
 #---
+
 #exome stringent
 SV remove chr type	chromosome type=special chromosomes
 SV count NGSD	max_count=30
@@ -65,6 +73,7 @@ SV OMIM genes	disabled
 SV gene overlap	complete=true	exonic/splicing=true	intronic/near gene=false	disabled
 SV compound-heterozygous	mode=n/a	disabled
 SV break point density NGSD	disabled
+
 #exome relaxed
 SV remove chr type	chromosome type=special chromosomes
 SV count NGSD	max_count=30
@@ -166,5 +175,6 @@ SV genotype control	genotypes=wt
 SV break point density NGSD	disabled
 
 #---
+
 #somatic
 SV SomaticScore	Somaticscore=50	disabled
