GSvarServer: added test parameters to nightly test settings

--- a/bin/settings_nightly.ini
+++ b/bin/settings_nightly.ini
@@ -68,3 +68,5 @@ ssl_certificate =
 ssl_key = 
 ssl_certificate_chain = 
 session_duration = 36000
+qe_api_base_url = "http://localhost:8000"
+qe_secure_token = "secure_token_for_testing"
