--- a/.github/workflows/linux_machine_gcc_gt_6_4.yml
+++ b/.github/workflows/linux_machine_gcc_gt_6_4.yml
@@ -52,5 +52,6 @@ jobs:
       run: make download_test_files
     - name: Start GSvar server and run tests
       run: |
+        export QT_QPA_PLATFORM=offscreen
         bin/GSvarServer &
         make -k test_lib test_server test_tools
